--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sadr",
-  "version": "1.0.1",
-  "description": "A Chrome extension for Deneb, it enhances some ability for social",
+  "name": "Deneb",
+  "version": "0.1.1",
+  "description": "Watch bangumi, in the way it should be.",
   "main": "event-page.js",
   "scripts": {
     "clean": "npm run rimraf -- dist",
@@ -12,7 +12,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack"
   },
-  "author": "Bob Yuan",
   "license": "MIT",
   "devDependencies": {
     "@types/chrome": "^0.0.58",
