--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,21 +1,33 @@
 {
   "manifest_version": 2,
-  "name": "Deneb Social",
-  "description": "Add some social elements to Deneb",
-  "version": "1.1",
+  "name": "番組Collection Plus",
+  "description": "Watch bangumi, in the way it should be.",
+  "version": "0.1.3",
   "background": {
     "scripts": ["backend.js"],
     "persistent": false
   },
   "externally_connectable": {
-    "matches": ["http://localhost:3000/*"]
+    "matches": [
+      "https://bangumi.co/*",
+      "https://*.internal.railgun.co/*"
+    ]
   },
   "permissions": [
     "cookies",
     "https://bgm.tv/*",
     "https://api.bgm.tv/*",
-    "http://localhost:3000/*",
+    "https://bangumi.co/*",
+    "https://*.internal.railgun.co/*",
     "storage",
     "tabs"
-  ]
+  ],
+  "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png"
+  },
+  "browser_action": {
+    "default_icon": "icons/32.png",
+    "name": "番組Collection"
+  }
 }
